--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,10 @@
     "baseUrl": "src/",
     "paths": {
       "@hocs/*": ["hocs/*"],
+      "@contexts/*": ["contexts/*"],
+      "@utils/*": ["utils/*"],
+      "@hooks/*": ["hooks/*"],
+      "@components/*": ["components/*"]
     }
   },
   "exclude": [
